--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "react-redux": "^5.0.7",
