--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "accounting": "^0.4.1",
     "express": "^4.16.3",
     "knex": "^0.15.2",
+    "moment": "^2.22.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
