--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react": "^16.3.2",
+    "superagent": "^3.8.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -45,10 +48,7 @@
     "jest": "^22.4.3",
     "jsdom": "^11.8.0",
     "nodemon": "^1.17.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
     "sqlite3": "^4.0.2",
-    "superagent": "^3.8.2",
     "webpack": "3"
   }
 }
