added a button to calculator

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "presets": [
       "env",
       "react"
+    ],
+    "plugins": [
+      "babel-plugin-transform-object-rest-spread"
     ]
   },
   "jest": {
