--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
   "dependencies": {
     "accounting": "^0.4.1",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "knex": "^0.15.2",
     "moment": "^2.22.2",
     "pg": "^7.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
